add_library(TensorFlowTests
  CollectionTesting.swift
  ContextTests.swift
  EpochsTests.swift
  FreezableTests.swift
  Helpers.swift
  InitializerTests.swift
  LayerTests.swift
  LazyTensorEvaluationTests.swift
  LazyTensorExplicitTraceTests.swift
  LazyTensorHandleTests.swift
  LazyTensorOperationTests.swift
  LazyTensorShapeInferenceTests.swift
  LazyTensorTestHelper.swift
  LazyTensorTFFunctionBuilderTests.swift
  LazyTensorTraceCacheTests.swift
  LazyTensorTraceTests.swift
  LossTests.swift
  OptimizerTests.swift
  RuntimeTests.swift
  SamplingTests.swift
  SequencedTests.swift
  SequencedTests.swift.gyb
  SequentialTests.swift
  SequentialTests.swift.gyb
  TensorAutoDiffTests.swift
  TensorGroupTests.swift
  TensorTests.swift
  TrivialModelTests.swift
  XCTestManifests.swift

  OperatorTests/BasicTests.swift
  OperatorTests/ComparisonTests.swift
  OperatorTests/DatasetTests.swift
  OperatorTests/ImageTests.swift
  OperatorTests/LinearAlgebraTests.swift
  OperatorTests/MathTests.swift
  OperatorTests/MatrixTests.swift
  OperatorTests/NNTests.swift)
target_link_libraries(TensorFlowTests PUBLIC
  CTensorFlow
  TensorFlow
  Tensor
  XCTest)
